# pomera

./: .env  .gitignore  .gitmodules  CLAUDE.md  README.md  Tiltfile  docker-compose.yml
analytics/: Dockerfile  app.py
fc_old/: docker-compose.override.yml
firecrawl/: docker-compose.override.yml
mock/crawled_server/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
mock/crawled_server/app/: layout.tsx
mock/crawled_server/app/anti-bot/: page.tsx
mock/crawled_server/app/client-only/: page.tsx
mock/crawled_server/app/dynamic/: layout.tsx  page.tsx
mock/crawled_server/app/dynamic/lib/: data.ts
mock/crawled_server/app/map/: page.tsx
mock/crawled_server/app/meta-fake/: page.tsx
mock/crawled_server/app/no-sitemap/: page.tsx
mock/crawled_server/app/partial-map/: page.tsx
mock/crawled_server/app/static/: layout.tsx  page.tsx
mock/crawled_server/app/static/about/: page.tsx
mock/crawled_server/app/trap-broken/: page.tsx
mock/crawled_server/public/: robots.txt  sitemap.xml
mock/crawled_server/tests/: README.md  test-staticland.js
mock/crawled_server/tests/staticland/: test-staticland.js
mock/defensive_server/: package-lock.json  package.json
store/: Cargo.toml  Dockerfile  go.mod  main.go  main_test.go  rustfmt.toml
store/src/: lib.rs  main.rs
store_go/: Dockerfile  fc_sample_yahoo_news.json  go.sum  main.go
store_others/lisp/: firecrawl-lisp-client.asd  main.lisp
store_others/rust/: main.rs
store_rust/: Cargo.toml
store_rust/src/: main.rs
(+6 files in other folders)
