[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
firecrawl = "^1.0"
tokio = { version = "^1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "alloc"] }
tempfile = "3"
httpmock = "0.7"
